--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mystery+Quest&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 
 /* GENERAL */
 
@@ -12,9 +12,8 @@
 
 * {
   margin: 0px;
-  padding: 10px 20px;
   box-sizing: border-box;
-  font-family: "Raleway", serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;;
 }
@@ -23,18 +22,56 @@ html {
   scroll-behavior: smooth; /* Effet scroll doux: */
 }
 
+/* Page */
+
 body {
-  background: #383838;
-  color: #09F7BB;
+  padding: 3rem 5rem;
+  background: var(--color2);
+  color: var(--color1);
 }
 
 h1 {
   text-align: center;
   font-size: 4rem;
   font-weight: 600;
-  padding-bottom: 30px;
-
+  padding-bottom: 2.5rem;
+  
 }
 p {
   text-align: justify;
+}
+
+/* Sidebar */
+
+.sidebar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: var(--color2);
+  background: var(--color1);
+  width: 18%;
+  height: 110%;
+  padding: 0;
+}
+
+.sidebar::before {
+  content:"";
+}
+
+
+ul{
+  padding: 0.5rem 0.5rem;
+}
+
+li {
+  list-style: none;
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 3.5rem;
+}
+
+i {
+  scale: 5;
+  background: var(--color2);
+  color: var(--color1);
 }
